Login page form - build styles using tailwind - frontend folder

--- a/frontend/templates/layout.ejs
+++ b/frontend/templates/layout.ejs
@@ -3,12 +3,11 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Authorization Server</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./build/style.css">
     <link rel="icon" href="./favicon.ico" type="image/x-icon">
   </head>
-  <body>
+  <body class="bg-gray-50">
     <%- body %>
   </body>
 </html>
