implement basic login functionality

--- a/frontend/templates/loginPage.ejs
+++ b/frontend/templates/loginPage.ejs
@@ -6,23 +6,21 @@
         <path d="M11.47 3.841a.75.75 0 0 1 1.06 0l8.69 8.69a.75.75 0 1 0 1.06-1.061l-8.689-8.69a2.25 2.25 0 0 0-3.182 0l-8.69 8.69a.75.75 0 1 0 1.061 1.06l8.69-8.689Z" />
         <path d="m12 5.432 8.159 8.159c.03.03.06.058.091.086v6.198c0 1.035-.84 1.875-1.875 1.875H15a.75.75 0 0 1-.75-.75v-4.5a.75.75 0 0 0-.75-.75h-3a.75.75 0 0 0-.75.75V21a.75.75 0 0 1-.75.75H5.625a1.875 1.875 0 0 1-1.875-1.875v-6.198a2.29 2.29 0 0 0 .091-.086L12 5.432Z" />
       </svg>
-      
     </a>
   </div>
   <form action="" method="post" class="flex flex-col items-start text-left size-max">
     <div class="m-2">
       <label>
         <span class="mx-1 w-32 inline-block">Username:</span> 
-        <input class="border-2 px-2 py-1 hover:border-dashed focus:border-solid rounded-md" type="text" name="username" />
+        <input class="border-2 px-2 py-1 hover:border-dashed focus:border-solid rounded-md" type="text" name="username" required />
       </label>
     </div>
     <div class="m-2">
       <label>
         <span class="mx-1 w-32 inline-block"> Password:</span> 
-        <input class="border-2 px-2 py-1 hover:border-dashed focus:border-solid rounded-md" type="password" name="password" />
+        <input class="border-2 px-2 py-1 hover:border-dashed focus:border-solid rounded-md" type="password" name="password" required />
       </label>
     </div>
     <button type="submit" class="m-2 p-3 w-24 h-10 pb-1 pt-1 rounded-lg bg-blue-700 hover:bg-blue-500 text-white border-none">Log in</button>
   </form>
 </main>
-
