- links to /register and /login on homepage - reuse header to homepage - use partials to reduce duplication

--- a/frontend/templates/homePage.ejs
+++ b/frontend/templates/homePage.ejs
@@ -1,1 +1,14 @@
-Hello  <%= user.name  %>
+<%- include('header', { title: 'Home' }); %>
+
+<main class="container mx-auto min-w-fit flex flex-col items-center text-center justify-center">
+  <% if (user) { %>
+    <h1 class="text-3xl">Welcome  <%= user.name  %> <%= user.surname  %>! 🎉</h1>
+  <% } else { %>
+    <a href="/register">
+      <%- include('button', { color: 'red', type: 'button', text: 'Register' }); %>
+    </a>
+    <a href="/login">
+      <%- include('button', { color: 'blue', type: 'button', text: 'Sign in' }); %>
+    </a>
+  <% } %>
+</main>
