--- a/frontend/templates/loginPage.ejs
+++ b/frontend/templates/loginPage.ejs
@@ -1,13 +1,6 @@
+<%- include('header', { title: 'Enter your credentials' }); %>
+
 <main class="container mx-auto min-w-fit flex flex-col items-center text-center justify-center">
-  <div class="w-screen bg-gray-800 p-4 flex text-center justify-between mb-6">
-    <h1 class="text-3xl font-medium text-white">Enter your credentials</h1>
-    <a href="/" class="text-white ml-auto mr-1 p-1 hover:bg-white hover:text-gray-700 rounded-md">
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="size-8">
-        <path d="M11.47 3.841a.75.75 0 0 1 1.06 0l8.69 8.69a.75.75 0 1 0 1.06-1.061l-8.689-8.69a2.25 2.25 0 0 0-3.182 0l-8.69 8.69a.75.75 0 1 0 1.061 1.06l8.69-8.689Z" />
-        <path d="m12 5.432 8.159 8.159c.03.03.06.058.091.086v6.198c0 1.035-.84 1.875-1.875 1.875H15a.75.75 0 0 1-.75-.75v-4.5a.75.75 0 0 0-.75-.75h-3a.75.75 0 0 0-.75.75V21a.75.75 0 0 1-.75.75H5.625a1.875 1.875 0 0 1-1.875-1.875v-6.198a2.29 2.29 0 0 0 .091-.086L12 5.432Z" />
-      </svg>
-    </a>
-  </div>
   <form action="" method="post" class="flex flex-col items-start text-left size-max">
     <div class="m-2">
       <label>
@@ -21,6 +14,6 @@
         <input class="border-2 px-2 py-1 hover:border-dashed focus:border-solid rounded-md" type="password" name="password" required />
       </label>
     </div>
-    <button type="submit" class="m-2 p-3 w-24 h-10 pb-1 pt-1 rounded-lg bg-blue-700 hover:bg-blue-500 text-white border-none">Log in</button>
+    <%- include('button', { color: 'blue', type: 'submit', text: 'Log in' }); %>
   </form>
 </main>
