--- a/frontend/templates/homePage.ejs
+++ b/frontend/templates/homePage.ejs
@@ -5,7 +5,7 @@
     <h1 class="text-3xl">Welcome  <%= user.name  %> <%= user.surname  %>! 🎉</h1>
   <% } else { %>
     <a href="/register">
-      <%- include('button', { color: 'red', type: 'button', text: 'Register' }); %>
+      <%- include('button', { color: 'red', type: 'button', text: 'Create new account' }); %>
     </a>
     <a href="/login">
       <%- include('button', { color: 'blue', type: 'button', text: 'Sign in' }); %>
