--- a/frontend/templates/loginPage.ejs
+++ b/frontend/templates/loginPage.ejs
@@ -2,6 +2,9 @@
 
 <main class="container mx-auto min-w-fit flex flex-col items-center text-center justify-center">
   <form action="" method="post" class="flex flex-col items-start text-left size-max">
+    <% if (validationError) { %>
+      <div class="mx-3 mb-2 text-rose-500">Wrong username or password.</div>
+    <% } %>
     <div class="m-2">
       <%- include('textInput', { label: 'Username:', type: 'text', name: 'username' }); %>
     </div>
