--- a/frontend/templates/textInput.ejs
+++ b/frontend/templates/textInput.ejs
@@ -1,4 +1,9 @@
 <label>
   <span class="mx-1 w-32 inline-block"><%= label %></span> 
-  <input class="border-2 px-2 py-1 hover:border-dashed focus:border-solid rounded-md" type="<%= type ?? 'text' %>" name="<%= name %>" required />
+  <input 
+    class="border-2 px-2 py-1 hover:border-dashed focus:border-solid rounded-md" 
+    type="<%= type %>" 
+    name="<%= name %>" 
+    value="<%= locals.value ? value : '' %>" 
+  />
 </label>
