--- a/frontend/templates/loginPage.ejs
+++ b/frontend/templates/loginPage.ejs
@@ -11,6 +11,6 @@
     <div class="m-2">
       <%- include('textInput', { label: 'Password:', type: 'password', name: 'password' }); %>
     </div>
-    <%- include('button', { color: 'blue', type: 'submit', text: 'Log in' }); %>
+    <%- include('button', { color: 'blue', type: 'submit', text: 'Sign in' }); %>
   </form>
 </main>
