--- a/frontend/templates/approvePage.ejs
+++ b/frontend/templates/approvePage.ejs
@@ -2,7 +2,7 @@
 
 <main class="container mx-auto min-w-fit flex flex-col items-center text-center justify-center">
   <h2 class="text-2xl">"<%= clientName %>" wants to access your user data</h2>
-  <a href="<%= redirectUri %>">
-    <%- include('button', { color: 'blue', type: 'button', text: 'Approve' }); %>
-  </a>
+  <form action="" method="post">
+    <%- include('button', { color: 'blue', type: 'submit', text: 'Approve' }); %>
+  </form>
 </main>
