--- a/frontend/templates/layout.ejs
+++ b/frontend/templates/layout.ejs
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Authorization Server</title>
-    <link rel="stylesheet" href="./build/style.css">
-    <link rel="icon" href="./favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="/build/style.css">
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
   </head>
   <body class="bg-gray-50">
     <%- body %>
