--- a/frontend/templates/button.ejs
+++ b/frontend/templates/button.ejs
@@ -1,9 +1,9 @@
 <% if (color === 'blue') { %>
-  <button type="<%= type %>" class="m-2 p-3 min-w-44 h-10 pb-1 pt-1 rounded-lg bg-blue-700 hover:bg-blue-500 text-white border-none">
+  <button type="<%= type %>" <%= locals.name ? `name=${name}` : '' %> class="m-2 p-3 min-w-44 h-10 pb-1 pt-1 rounded-lg bg-blue-700 hover:bg-blue-500 text-white border-none">
     <%= text %>
   </button>
 <% } else if (color === 'red') { %>
-  <button type="<%= type %>" class="m-2 p-3 min-w-44 h-10 pb-1 pt-1 rounded-lg bg-rose-700 hover:bg-rose-500 text-white border-none">
+  <button type="<%= type %>" <%= locals.name ? `name=${name}` : '' %> class="m-2 p-3 min-w-44 h-10 pb-1 pt-1 rounded-lg bg-rose-700 hover:bg-rose-500 text-white border-none">
     <%= text %>
   </button>
 <% } %>
