experimenting with header background gradient

--- a/frontend/templates/header.ejs
+++ b/frontend/templates/header.ejs
@@ -1,4 +1,4 @@
-<div class="w-full bg-gray-800 p-4 flex text-center text-white mb-6 items-center">
+<div class="w-full bg-gradient-to-b from-gray-800 to-gray-600 p-4 flex text-center text-white mb-6 items-center">
   <h1 class="text-3xl font-medium"><%= title %></h1>
   <nav class="ml-auto flex gap-x-3">
     <% if (user !== null) { %>
